--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
+    "@types/react": "18.3.3",
     "concurrently": "^8.2.2",
-    "react-scripts": "^5.0.1",
-    "react-dom": "^18.3.1",
     "express": "^4.19.2",
     "jsdom": "^24.1.0",
-    "postcss": "^8.4.39"
+    "postcss": "^8.4.39",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "concurrently \"npm run start:react\" \"npm run start:server\"",
